update readme file

--- a/public/res.html
+++ b/public/res.html
@@ -16,10 +16,16 @@
     <nav>
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Try Mailer.js</a>
+          <a
+            class="nav-link active"
+            href="https://github.com/greatkay-olowo/easymailer"
+            >Try Mailer.js</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact Us</a>
+          <a class="nav-link" href="https://twitter.com/kayode_alao_"
+            >Contact Us</a
+          >
         </li>
       </ul>
     </nav>
